fix header<->wrapper spacing on medium size

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -71,6 +71,7 @@ strong {
 
 .wrapper {
   width:650px;
+  //margin:0 auto;
   margin:0 auto;
   position:relative;
 }
@@ -151,7 +152,8 @@ dt {
 }
 
 header {
-  padding: 15px 10px 30px 10px;
+  //padding: 15px 10px 30px 10px;
+  padding: 8px;
   margin: 0;
   position: fixed;
   top: 0;
@@ -164,7 +166,7 @@ header {
   z-index:99;
   -webkit-font-smoothing:antialiased;
   //min-height: 76px;
-  min-height: 50px;
+  //min-height: 50px;
 
   h1, h1 a {
     font: 40px/48px 'Copse', "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -279,7 +281,7 @@ section {
   padding: 30px 30px 50px 30px;
   margin: 20px 0;
   //margin-top: 190px;
-  margin-top: 150px;
+  margin-top: 130px;
   position:relative;
   background: #fbfbfb;
   border-radius: 3px;
@@ -295,7 +297,7 @@ small {
   width: 230px;
   position: fixed;
   //top: 220px;
-  top: 160px;
+  top: 150px;
   left:50%;
   margin-left:360px;
   text-align: left;
@@ -422,7 +424,8 @@ footer {
     border:1px solid #e5e5e5;
     border-width:1px 0;
     padding:20px auto;
-    margin: 190px auto 20px;
+    //margin: 190px auto 20px;
+    margin: 130px auto 20px;
     max-width: 600px;
   }
 
@@ -442,8 +445,10 @@ footer {
   }
 
   header {
-    padding:20px 20px;
+    //padding:20px 20px;
+    padding: 2px;
     margin: 0;
+    min-height: 0px;
 
     h1 {
       font-size: 32px;
@@ -471,7 +476,8 @@ footer {
   }
 
   section {
-    margin-top: 130px;
+    //margin-top: 130px;
+    margin-top: 60px;
     margin-bottom: 0px;
     width: auto;
   }
